app/kfp/cache-deployer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-deployer-deployment
  labels:
    app: cache-deployer
    application-crd-id: kubeflow-pipelines
  namespace: kfp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache-deployer
      application-crd-id: kubeflow-pipelines
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cache-deployer
        application-crd-id: kubeflow-pipelines
    spec:
      containers:
      - name: main
        image: ghcr.io/kubeflow/kfp-cache-deployer:2.4.1
        imagePullPolicy: Always
      serviceAccountName: kubeflow-pipelines-cache-deployer-sa
      restartPolicy: Always
